RR-2763 - Remove EHCP answer from Plan in SAR report
